--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,16 +30,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_map: ^7.0.2
-  latlong2: ^0.9.1
-  geolocator: ^12.0.0
+  flutter_map: any
+  flutter_map_cancellable_tile_provider: any
+  flutter_map_marker_cluster: any
+  latlong2: any
+  geolocator: ^13.0.1
   intl: ^0.19.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   graphql: ^5.1.3
-  flutter_map_cancellable_tile_provider: ^3.0.0
 
 dev_dependencies:
   flutter_test:
