--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   graphql: ^5.1.3
   url_launcher: ^6.3.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
