--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   graphql: ^5.1.3
   url_launcher: ^6.3.0
   google_fonts: ^6.2.1
+  localstorage: ^5.0.0
+  flutter_map_animations: ^0.7.1
 
 dev_dependencies:
   flutter_test:
