--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Increment version
         run: |
           # Extraire la dernière version publiée et la version du fichier pubspec.yaml
-          latest_version="${{ steps.get_latest_release.outputs.release }}"
+          latest_version="${{ steps.get_latest_release.outputs.tag }}"
           extracted_version="${{ env.VERSION }}"
 
           # Extraire X, Y, Z et suffix des deux versions
@@ -65,14 +65,22 @@ jobs:
              (( extracted_X == latest_X && extracted_Y == latest_Y && extracted_Z > latest_Z )); then
               # Utiliser la version extraite si elle est plus grande
               new_version="$extracted_version"
+              add_alpha_suffix=[[ -z "$extracted_suffix" && "$extracted_X" -eq 0 ]]
           elif (( extracted_X == latest_X && extracted_Y == latest_Y && extracted_Z == latest_Z )); then
               # Incrémenter Z de la version extraite si elle est égale à la dernière version
               new_Z=$((extracted_Z + 1))
               new_version="v${extracted_X}.${extracted_Y}.${new_Z}${extracted_suffix}"
+              add_alpha_suffix=[[ -z "$extracted_suffix" && "$extracted_X" -eq 0 ]]
           else
               # Sinon, incrémenter la dernière version
               new_Z=$((latest_Z + 1))
               new_version="v${latest_X}.${latest_Y}.${new_Z}${latest_suffix}"
+              add_alpha_suffix=[[ -z "$latest_suffix" && "$latest_X" -eq 0 ]]
+          fi
+
+          # Ajouter "-alpha" si nécessaire
+          if [[ "$add_alpha_suffix" == true ]]; then
+              new_version="${new_version}-alpha"
           fi
 
           echo "Nouvelle version: $new_version"
