update gh actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,23 +62,28 @@ jobs:
               exit 1
           fi
 
+          add_alpha_suffix=false
+          if [[ -z "$extracted_suffix" ]] && [ "$extracted_X" -eq 0 ]; then
+              add_alpha_suffix=true
+          fi
+
           # Comparaison des parties de version
           if (( extracted_X > latest_X )) || 
              (( extracted_X == latest_X && extracted_Y > latest_Y )) || 
              (( extracted_X == latest_X && extracted_Y == latest_Y && extracted_Z > latest_Z )); then
               # Utiliser la version extraite si elle est plus grande
               new_version="$extracted_version"
-              add_alpha_suffix=$([[ -z "$extracted_suffix" && "$extracted_X" -eq 0 ]])
           elif (( extracted_X == latest_X && extracted_Y == latest_Y && extracted_Z == latest_Z )); then
               # Incrémenter Z de la version extraite si elle est égale à la dernière version
               new_Z=$((extracted_Z + 1))
               new_version="v${extracted_X}.${extracted_Y}.${new_Z}${extracted_suffix}"
-              add_alpha_suffix=$([[ -z "$extracted_suffix" && "$extracted_X" -eq 0 ]])
           else
               # Sinon, incrémenter la dernière version
               new_Z=$((latest_Z + 1))
               new_version="v${latest_X}.${latest_Y}.${new_Z}${latest_suffix}"
-              add_alpha_suffix=$([[ -z "$latest_suffix" && "$latest_X" -eq 0 ]])
+              if [[ -z "$latest_suffix" ]] && [ "$latest_X" -eq 0 ]; then
+                add_alpha_suffix=true
+              fi          
           fi
 
           echo "$add_alpha_suffix"
