--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -159,5 +159,5 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           artifacts: "build/app/outputs/flutter-apk/app-release.apk,build/app/outputs/bundle/release/app-release.aab,build/ios_build.tar.gz"
-          tag: v${{ env.VERSION }}
+          tag: ${{ env.VERSION }}
           token: ${{ secrets.TOKEN }}
