fix: gh actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,19 +78,19 @@ jobs:
 
           is_new_version=false
 
-          if [[ "${{ github.event.head_commit.message }}"" == fix* ]]; then
+          if [[ "${{ github.event.head_commit.message }}" == fix* ]]; then
               new_latest_Z=$latest_Z+1
               new_extracted_Z=$extracted_Z+1
               is_new_version=true
           fi
 
-          if [[ "${{ github.event.head_commit.message }}"" == feat* ]]; then
+          if [[ "${{ github.event.head_commit.message }}" == feat* ]]; then
               new_latest_Y=$latest_Y+1
               new_extracted_Y=$extracted_Y+1
               is_new_version=true
           fi
 
-          tr_commit=$(echo "${{ github.event.head_commit.message }}"" | tr ":")
+          tr_commit=$(echo "${{ github.event.head_commit.message }}" | tr ":")
           start_commit=${tr_commit[0]}
 
           if [[ $start_commit == *"!"* ]] || [[ "${{ github.event.head_commit.message }}" == *"BREAKING CHANGE" ]]; then
