--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -132,8 +132,7 @@ jobs:
           fi
 
           echo "Nouvelle version: $new_version"
-          echo "NEW_VERSION=" >> $env:GITHUB_OUTPUT
-          # echo "NEW_VERSION=$new_version" >> $env:GITHUB_OUTPUT
+          echo "NEW_VERSION=$new_version" >> $env:GITHUB_OUTPUT
 
   build:
     name: Build & Release
@@ -212,3 +211,15 @@ jobs:
           artifacts: "build/app/outputs/flutter-apk/app-release.apk,build/app/outputs/bundle/release/app-release.aab,build/ios_build.tar.gz"
           tag: ${{ needs.get_version.outputs.version }}
           token: ${{ secrets.TOKEN }}
+
+      - name: Update version in pubspec.yaml
+        id: update_version
+        uses: wow-actions/update-file@v1
+        with:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          path: pubspec.yaml
+          content: "version: ${{ needs.get_version.outputs.version }}"
+          commit_message: "chore: update version in pubspec.yaml to ${{ needs.get_version.outputs.version }} [skip ci]"
+          opening_comment: "# [START AUTO UPDATE]"
+          closing_comment: "# [END AUTO UPDATE]"
+          warning_comment: "# Please keep comment here to allow auto-update"
