--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,8 @@ jobs:
           latest_version="${{ steps.get_latest_release.outputs.release }}"
           extracted_version="${{ steps.extract_version.outputs.VERSION }}"
 
+          echo extracted_version
+
           new_version=""
 
           # Extraire X, Y, Z et suffix des deux versions
