--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -213,8 +213,8 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
           path: pubspec.yaml
-          content: "version: ${{ needs.get_version.outputs.version }}"
+          content: "version: ${{ needs.get_version.outputs.version }}\n"
           commit_message: "chore: update version in pubspec.yaml to ${{ needs.get_version.outputs.version }} [skip ci]"
-          opening_comment: "# [START AUTO UPDATE]"
-          closing_comment: "# [END AUTO UPDATE]"
-          warning_comment: "# Please keep comment here to allow auto-update"
+          opening_comment: "# [START AUTO UPDATE]\n"
+          closing_comment: "# [END AUTO UPDATE]\n"
+          warning_comment: "# Please keep comment here to allow auto-update\n"
