--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -140,17 +140,24 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Update version in pubspec.yaml
-        id: update_version
-        uses: wow-actions/update-file@v1
+      # - name: Update version in pubspec.yaml
+      #   id: update_version
+      #   uses: wow-actions/update-file@v1
+      #   with:
+      #     GITHUB_TOKEN: ${{ secrets.TOKEN }}
+      #     path: pubspec.yaml
+      #     content: "version: ${{ needs.get_version.outputs.version }}\n"
+      #     commit_message: "chore: update version in pubspec.yaml to ${{ needs.get_version.outputs.version }} [skip ci]"
+      #     # opening_comment: "# [START AUTO UPDATE]"
+      #     #closing_comment: "# [END AUTO UPDATE]"
+      #     # warning_comment: "# Please keep comment here to allow auto-update"
+      - name: Update values.yaml
+        uses: fjogeleit/yaml-update-action@v0.15.0
         with:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
-          path: pubspec.yaml
-          content: "version: ${{ needs.get_version.outputs.version }}\n"
-          commit_message: "chore: update version in pubspec.yaml to ${{ needs.get_version.outputs.version }} [skip ci]"
-          # opening_comment: "# [START AUTO UPDATE]"
-          #closing_comment: "# [END AUTO UPDATE]"
-          # warning_comment: "# Please keep comment here to allow auto-update"
+          valueFile: "pubspec.yaml"
+          propertyPath: "version"
+          value: ${{ needs.get_version.outputs.version }}
+          commitChange: false
 
         #5 Setup Java
       - name: Set Up Java
