--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
 
     outputs:
       version: ${{ steps.increment_version.outputs.NEW_VERSION }}
+      version-flutter: ${{ steps.increment_version.outputs.NEW_VERSION_FLUTTER }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -128,6 +129,7 @@ jobs:
 
           echo "Nouvelle version: $new_version"
           echo "NEW_VERSION=$new_version" >> "$GITHUB_OUTPUT"
+          echo "NEW_VERSION_FLUTTER=${new_version:1}" >> "$GITHUB_OUTPUT"
 
   build:
     name: Build & Release
@@ -156,7 +158,7 @@ jobs:
         with:
           valueFile: "pubspec.yaml"
           propertyPath: "version"
-          value: ${{ needs.get_version.outputs.version }}
+          value: ${{ needs.get_version.outputs.version-flutter }}
           commitChange: false
 
         #5 Setup Java
