--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -194,14 +194,12 @@ jobs:
         #9 Building APK
       - name: Build APK
         run: |
-          echo "API_TOKEN=${{ secrets.START_GG_API_TOKEN }}" > .env
-          flutter build apk --release
+          flutter build apk --dart-define=API_KEY=${{ secrets.START_GG_API_TOKEN }} --release
 
         #10 Building App Bundle (aab)
       - name: Build appBundle
         run: |
-          echo "API_TOKEN=${{ secrets.START_GG_API_TOKEN }}" > .env
-          flutter build appbundle
+          flutter build appbundle --dart-define=API_KEY=${{ secrets.START_GG_API_TOKEN }}
 
         # Build IPA ( IOS Build )
       # - name: Build IPA
@@ -224,6 +222,7 @@ jobs:
       - name: Create Release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/flutter-apk/app-release.apk,build/app/outputs/bundle/release/app-release.aab,build/ios_build.tar.gz"
+          artifacts: "build/app/outputs/flutter-apk/app-release.apk,build/app/outputs/bundle/release/app-release.aab"
+          # artifacts: "build/app/outputs/flutter-apk/app-release.apk,build/app/outputs/bundle/release/app-release.aab,build/ios_build.tar.gz"
           tag: ${{ needs.get_version.outputs.version }}
           token: ${{ secrets.TOKEN }}
