--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,15 +1,74 @@
-name: PR Conventional Commit Validation
+name: "Test Build"
 
 on:
-  pull_request:
-    types: [opened, synchronize, reopened, edited]
+  push:
+    branches:
+      - test
 
 jobs:
-  validate-pr-title:
+  build-test:
+    name: Build & Release
     runs-on: ubuntu-latest
+
     steps:
-      - name: PR Conventional Commit Validation
-        uses: ytanikin/pr-conventional-commits@1.4.0
+      #1 Checkout Repository
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      # - name: Update version in pubspec.yaml
+      #   id: update_version
+      #   uses: wow-actions/update-file@v1
+      #   with:
+      #     GITHUB_TOKEN: ${{ secrets.TOKEN }}
+      #     path: pubspec.yaml
+      #     content: "version: ${{ needs.get_version.outputs.version }}\n"
+      #     commit_message: "chore: update version in pubspec.yaml to ${{ needs.get_version.outputs.version }} [skip ci]"
+      #     # opening_comment: "# [START AUTO UPDATE]"
+      #     #closing_comment: "# [END AUTO UPDATE]"
+      #     # warning_comment: "# Please keep comment here to allow auto-update"
+      #5 Setup Java
+      - name: Set Up Java
+        uses: actions/setup-java@v4
         with:
-          task_types: '["feat","fix", "chore", "ci", "docs", "style", "refactor", "perf", "test"]'
-          add_label: "false"
+          distribution: "oracle"
+          java-version: "17"
+
+        #6 Setup Flutter
+      - name: Set Up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "3.24.3"
+          channel: "stable"
+
+        #7 Install Dependencies
+      - name: Install Dependencies
+        run: flutter pub get
+
+        #8 Setup Keystore
+      - name: Decode Keystore
+        run: |
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/keystore.jks
+      - name: Create key.properties
+        run: |
+          echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" > android/key.properties
+          echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
+          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
+          echo "storeFile=keystore.jks" >> android/key.properties
+
+      #9 Building APK
+      - name: Build APK
+        run: |
+          flutter build apk --dart-define=API_KEY=${{ secrets.START_GG_API_TOKEN }} --release
+
+        #10 Building App Bundle (aab)
+      - name: Build appBundle
+        run: |
+          flutter build appbundle --dart-define=API_KEY=${{ secrets.START_GG_API_TOKEN }}
+
+        # Build IPA ( IOS Build )
+      # - name: Build IPA
+      #  run: flutter build ipa --no-codesign
+      # - name: Compress Archives and IPAs
+      #   run: |
+      #     cd build
+      #     tar -czf ios_build.tar.gz ios
