--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,11 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
+
+# <!-- [START AUTO UPDATE] -->
+# <!-- Please keep comment here to allow auto-update -->
 version: 0.1.0-alpha
+# <!-- [END AUTO UPDATE] -->
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -45,7 +49,6 @@ dependencies:
   google_fonts: ^6.2.1
   localstorage: ^5.0.0
   flutter_map_animations: ^0.7.1
-  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +68,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/
-    - .env
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
