--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,8 @@ migrate_working_dir/
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
-.vscode/launch.json
+.vscode/
+!.vscode/launch.json.exemple
 
 # Flutter/Dart/Pub related
 **/doc/api/
