--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_map_animations: ^0.7.1
   firebase_core: ^3.8.0
   firebase_analytics: ^11.3.5
+  multi_select_flutter: ^4.1.3
 
 dev_dependencies:
   flutter_test:
