--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter_map_marker_cluster: ^1.4.0
   latlong2: ^0.9.1
   geolocator: ^13.0.1
-  intl: ^0.19.0
+  intl: ^0.20.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -49,6 +49,9 @@ dependencies:
   google_fonts: ^6.2.1
   localstorage: ^5.0.0
   flutter_map_animations: ^0.7.1
+  firebase_core: ^3.8.0
+  firebase_analytics: ^11.3.5
+  multi_select_flutter: ^4.1.3
 
 dev_dependencies:
   flutter_test:
