--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter_map_marker_cluster: ^1.4.0
   latlong2: ^0.9.1
   geolocator: ^13.0.1
-  intl: ^0.20.1
+  intl: ^0.19.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -52,6 +52,7 @@ dependencies:
   firebase_core: ^3.8.0
   firebase_analytics: ^11.3.5
   multi_select_flutter: ^4.1.3
+  flutter_localization: ^0.3.0
 
 dev_dependencies:
   flutter_test:
