--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # <!-- [START AUTO UPDATE] -->
 # <!-- Please keep comment here to allow auto-update -->
-version: 0.1.0-alpha
+version: 1.0.0+1
 # <!-- [END AUTO UPDATE] -->
 
 environment:
@@ -39,7 +39,7 @@ dependencies:
   flutter_map_marker_cluster: ^1.4.0
   latlong2: ^0.9.1
   geolocator: ^13.0.1
-  intl: ^0.20.1
+  intl: ^0.19.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -52,6 +52,7 @@ dependencies:
   firebase_core: ^3.8.0
   firebase_analytics: ^11.3.5
   multi_select_flutter: ^4.1.3
+  easy_localization: ^3.0.7
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +72,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/
+    - assets/translations/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
